# hoshi

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  tokens.json.example
backend/: auth.py  config.py  main.py  requirements-dev.txt  requirements.txt  store.py
backend/providers/: __init__.py  anthropic.py  gemini.py  openai.py
backend/tests/: conftest.py  test_auth.py  test_check.py  test_providers.py  test_store.py  test_websocket.py
backend/tests/fixtures/: tokens.json
docs/plans/: 2026-02-17-hoshi-grammar-checker-design.md  2026-02-17-hoshi-implementation-plan.md  2026-03-01-linting-setup-design.md  2026-03-01-linting-setup-plan.md  2026-03-01-review-fixes-design.md  2026-03-01-review-fixes-plan.md
docs/reviews/: 2026-03-01-13-12-codex-ws-token-template-review.md  2026-03-01-14-review-fixes-code-review.md  2026-03-01-hoshi-code-review.md  2026-03-01-hoshi-review-report.md
frontend/: Dockerfile  entrypoint.sh  nginx.conf
frontend/static/: app.js  index.html  style.css
hook/: hook.sh
tests/: test_integration.sh
