[project]
name = "hoshi"
version = "0.1.0"
description = "Grammar teaching tool for Claude Code"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.34.0,<1.0",
    "anthropic>=0.52.0,<1.0",
    "openai>=1.82.0,<2.0",
    "google-genai>=1.14.0,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.25.0,<1.0",
    "httpx>=0.28.0,<1.0",
    "ruff>=0.11.0",
    "mypy>=1.13.0",
    "taskipy>=1.12.0",
]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["backend"]

include = ["*.py", "*.pyi"]

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLC0415", # Import not at top level
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
    "S101",    # Use of assert
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["S101", "PLR2004", "ARG001"]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Mypy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "openai.*",
    "google.*",
    "google.genai.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
]

# =============================================================================
# Taskipy Configuration
# =============================================================================
[tool.taskipy.tasks]
lint = "ruff check backend/"
typecheck = "mypy backend/"
test = "cd backend && pytest -v"
fix = "ruff check backend/ --fix"
format = "ruff format backend/"
check = "task lint && task typecheck && task test"
